src/objects/Accounting_SoftwarePlanVersion__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_SoftwarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting_SoftwarePlan</label>
        <referenceTo>Accounting_Softwareplan__c</referenceTo>
        <relationshipLabel>Accounting_SoftwarePlanVersion</relationshipLabel>
        <relationshipName>Accounting_SoftwarePlanVersion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeatureRates__c</fullName>
        <label>FeatureRates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <picklist>
            <picklistValues>
                <fullName>CommCareHQ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CommCareHQ India</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Software_Product_Rate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting_SoftwareProductRate</label>
        <referenceTo>Accounting_SoftwareProductRate__c</referenceTo>
        <relationshipLabel>Accounting_SoftwarePlanVersion</relationshipLabel>
        <relationshipName>Accounting_SoftwarePlanVersion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>date_created__c</fullName>
        <label>date_created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <externalId>true</externalId>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is_active</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting_SoftwarePlanVersion</label>
    <nameField>
        <displayFormat>SoftPlanVersion-{00000}</displayFormat>
        <label>accounting_softwareplanversion Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting_SoftwarePlanVersion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>